Starting to explain individual features.

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -50,7 +50,7 @@ min-height: 640px
 background-position: 0 100%
 }
 
-.slide-background.present[data-background-hash] {
+.slide-background.present[data-background-hash*=autoscroll] {
 background-position: 0 0;
 -webkit-animation: animatedBackground 55s 1.5s infinite ease alternate;
 -moz-animation: animatedBackground 55s 1.5s infinite ease alternate;
