--- a/css/overrides.css
+++ b/css/overrides.css
@@ -58,7 +58,7 @@ background-position: 0 0;
 animation: animatedBackground 55s 3.5s infinite ease alternate;
 }
 
-@-webkit-keyframes {
+@-webkit-keyframes animatedBackground {
 	0% {
         background-position: 0 0;
         }
@@ -66,7 +66,7 @@ animation: animatedBackground 55s 3.5s infinite ease alternate;
         background-position: 0 100%;
         }
 }
-@-moz-keyframes {
+@-moz-keyframes animatedBackground {
 	0% {
         background-position: 0 0;
         }
